package ca.mcmaster.se2aa4.island.team45.drone.direction.direction_states;

public interface DirectionState {
    String getFullDirection();
    String getDirection();
    String getLeft();
    String getRight();
}